--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 
 body{
     margin: 0;
-    min-height: 100vh;    
+    min-height: 100vh;  
+    background-image: url("Image/Image\ 1.jpg");  
 }
 
 h1,h2,h3,h4,h5,h6{
@@ -16,9 +17,11 @@ p{
 .img{
     position: absolute;    
     margin: 0;
-    height: 100%;
+    height :fit-content;
     width: 100%;
-    z-index: 0;
+    transition-duration: 0.9s;
+    transform: rotate(360deg);
+
 }
 
 /*Main Navigation bar*/
@@ -83,7 +86,8 @@ margin-left: 70px;
     margin-bottom: 0px;
     margin-left:70px ;
     padding: 15px 0;
-    max-width:fit-content;    
+    max-width:fit-content; 
+
 }
 
 .forumStyle{
@@ -98,15 +102,39 @@ margin-left: 70px;
     
 }
 .formAnkerTags{ 
-border-left: solid 1px #ffffffc9 ;
+border-left: solid 0.5px #ffffffc9 ;
 transition-duration: 0.8s;
 margin: 0;
+
 } 
 
 .formHeading{
     position: relative;
     margin: 80px 30px;
     font-size: 35px;
+}
+
+.domesticBtn{
+    background-color: #fff;
+    border: none;
+    border-radius: 4px;
+    padding: 15px;
+    color: #000000;
+    font-size: 18px;
+    cursor: pointer;
+    transition-duration: 0.4s;
+    
+}
+.internationalBtn{
+    background-color: #fff;
+    border: none;
+    border-radius: 4px;
+    padding: 15px;
+    color: #000000;
+    font-size: 18px;
+    cursor: pointer;
+    transition-duration: 0.4s;
+    margin-left: -5px;
 }
 
 /*From /Return left alignment*/
@@ -123,8 +151,8 @@ height: 90px;
     position: absolute;        
     margin-left: 500px;
     margin-top: 5px;
-
 }
+
 #searchFlights{
 position: relative;
 background-color: #9b3939;
@@ -182,12 +210,22 @@ margin-right: 40px;
 }
 
 /*Secondary nav bar  animation*/
-.linksanimation:hover{
+.activeSecondNav,.linksAnimation:hover{
     border: solid 1px #fff;
+}
+/*Form Animation*/
+.active, .domesticBtn:hover{
+    background-color: #9b3939;
+    color: #fff;    
+}
+
+.internationalBtn:hover{
+    background-color: #9b3939;
+    color: #fff;
 }
 
 /*form nav bar animation*/
-.formAnkerTags:hover{
+.activeFormLink,.formAnkerTags:hover{
     background-color: #9b3939;    
 }
 #searchFlights:hover{
@@ -200,4 +238,8 @@ margin-right: 40px;
 .advanceSearchStyle:hover{
     color: #fff;
     
+}
+/* Background img rotate*/
+.img:hover{
+    transform: rotate(358deg);
 }
